--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      Ionic Image Upload
+      Ionic with Cordova (Camera+Storage Testing)
     </ion-title>
   </ion-toolbar>
 </ion-header>
