--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,11 +6,11 @@
   </ion-toolbar>
 </ion-header>
  
-<ion-content padding>
+<ion-content class="ion-padding">
   <h3 *ngIf="images.length == 0" class="ion-text-center">Please Select Image!</h3>
  
   <ion-list>
-    <ion-item *ngFor="let img of images; index as pos" text-wrap>
+    <ion-item *ngFor="let img of images; index as pos" class="ion-text-wrap">
       <ion-thumbnail slot="start">
         <ion-img [src]="img.path"></ion-img>
       </ion-thumbnail>
